--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ quarkus.http.proxy.allow-forwarded=false
 quarkus.http.proxy.enable-forwarded-host=true
 quarkus.http.proxy.forwarded-host-header=X-Origin-Host
 # OIDC Auth Configuration
-quarkus.oidc.auth-server-url=${AUTH0_SERVER_URL}
-quarkus.oidc.client-id=${AUTH0_CLIENT_ID}
-quarkus.oidc.credentials.secret=${AUTH0_CLIENT_SECRET}
+quarkus.oidc.auth-server-url=${AUTH0_SERVER_URL:https://dev-yk1giot8.us.auth0.com}
+quarkus.oidc.client-id=${AUTH0_CLIENT_ID:BWr3dIpwqpmXD4GGgBVoYdCI3vGwDga8}
+quarkus.oidc.credentials.secret=${AUTH0_CLIENT_SECRET:Cj4fb9z1ay3v5R94Byj7rPsZ1rG6ctxuYgSGWgKpFYCyYOwstkLj-69gEcScMSNp}
 quarkus.oidc.application-type=web_app
 quarkus.oidc.authentication.extra-params.response_mode=query
 quarkus.oidc.authentication.java-script-auto-redirect=false
